@@ -25,11 +25,9 @@ usermount \- A graphical tool to mount, unmount and format filesystems.
 
 .B userformat
 [
-.I device
-]
-[
 .I options
 ]
+.I device
 .SH DESCRIPTION
 .B usermount
 is a graphical tool to allow users to easily manage removable media,
